# DesafioLabs---WishList

./: .env.example  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  settings.py  urls.py
authentication/: auth.py
favorites/: api.py  models.py  schemas.py
favorites/migrations/: 0001_initial.py  0002_initial.py
products/: api.py  models.py  schemas.py
products/migrations/: 0001_initial.py
reviews/: api.py  models.py  schemas.py
reviews/migrations/: 0001_initial.py
tests/: conftest.py  test_user.py
users/: api.py  models.py  schemas.py
users/migrations/: 0001_initial.py
